updated partners page

--- a/partners.html
+++ b/partners.html
@@ -57,33 +57,98 @@
 			<h1>PARTNERS</h1>
 			<p>Here goes a line about what Mdec is and the activities that has in the database. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas massa metus, interdum eget tempor non, sodales in orci. Cras dignissim neque quam.</p>
 
+
+			<!-- NYSCI PARTNER INFO --> 
 			<div class="partner-img" id="nysci">
-				<img src="images/nysci.gif" title="New York Hall of Science" style=""/>
+				<img src="images/nysci_part.png" title="New York Hall of Science" style=""/>
 			</div>
 
-			<div class="partner-text">
-				<h2>NEW YORK HALL OF SCIENCE</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam aliquet vel velit quis dignissim. Sed eleifend interdum est, ut commodo enim cursus eget. Aliquam non luctus massa, ut imperdiet diam.</p>
-				<p>Nunc arcu neque, tincidunt quis maximus ac, suscipit non erat. Mauris pulvinar massa mollis enim sollicitudin, eu accumsan sem consectetur. Curabitur sit amet sapien in massa interdum tempus. Duis scelerisque enim ac sodales ullamcorper. </p>
+			<div class="partner-text" id="nysci">
+				<h4>NEW YORK HALL OF SCIENCE</h4>
+				<p>The New York Hall of Science presents 450 exhibits, demonstrations and design spaces that explain science, technology, engineering and math. A visit to NYSCI is a hands-on, energetic educational experience where you can indulge your curiosity and nurture your creativity. For more information, visit nysci.org.</p>
 
-				<button>WWW.NYSCI.ORG</button>
+				<a href="http://nysci.org/" target="_blank"><button>WWW.NYSCI.ORG</button></a>
 			</div>
 
-			<br><br>
+			<hr class="break">
 
-			<hr style="width:100%; height=1px; color:black;">
-
+			<!-- SMM PARTNER INFO --> 
 			<div class="partner-img" id="minnesota">
-				<img src="images/smm.gif" title="Science Museum of Minnesota" style=""/>
+				<img src="images/smm_part.png" title="Science Museum of Minnesota" style=""/>
 			</div>
 
 			<div class="partner-text">
-				<h2>MUSEUM OF SCIENCE MINNESOTA</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam aliquet vel velit quis dignissim. Sed eleifend interdum est, ut commodo enim cursus eget. Aliquam non luctus massa, ut imperdiet diam.</p>
-				<p>Nunc arcu neque, tincidunt quis maximus ac, suscipit non erat. Mauris pulvinar massa mollis enim sollicitudin, eu accumsan sem consectetur. Curabitur sit amet sapien in massa interdum tempus. Duis scelerisque enim ac sodales ullamcorper. </p>
-				<button>WWW.NYSCI.ORG</button>
+				<h4>SCIENCE MUSEUM OF MINNESOTA</h4>
+				<p>The Science Museum of Minnesota, founded in 1907, is a large regional science museum located on the banks of the Mississippi River in downtown St. Paul.</p>
+				<p>The Science Museum's programs combine research and collection facilities, a public science education center, extensive teacher education and school outreach programs, and an Imax Convertible Dome Omnitheater to provide science education to our audience of more than a million people per year.</p>
+				
+				<a href="http://smm.org/" target="_blank"><button>WWW.SMM.ORG</button></a>
 
 			</div>
+
+			<hr class="break">
+
+			<!-- TELUS SPARK PARTNER INFO --> 
+			<div class="partner-img" id="spark">
+				<img src="images/spark_part.png" title="TELUS Spark" style"">
+			</div>
+
+			<div class="partner-text">
+				<h4>TELUS SPARK</h4>
+
+				<p>It takes a core set of skills to create something new, whether it’s a ground-breaking innovation or a toy robot. At TELUS Spark, we encourage all our visitors to explore the extraordinary, using their imagination to see beyond what exists, their curiosity to formulate a question and their persistence and problem-solving skills to take risks and keep going and growing confidence as they look for solutions.</p>
+
+				<a href="http://sparkscience.ca/" target="_blank"><button>WWW.SPARKSCIENCE.CA</button></a>
+			</div>
+
+			<hr class="break">
+
+			<!-- COSI PARTNER INFO --> 
+			<div class="partner-img" id="cosi">
+				<img src="images/cosi_part.png" title="Center of Science and Industry" style"">
+			</div>
+
+			<div class="partner-text">
+				<h4>CENTER OF SCIENCE AND INDUSTRY</h4>
+
+				<p>COSI is Columbus' dynamic hands-on science center named the #1 science center in the country for families by Parents Magazine.</p>
+				<p>COSI features more than 320,000 square feet of hands-on science, ten-themed exhibit areas, the largest digital screen in Ohio, an outdoor science park, a special area for tiny explorers ages 0 through Kindergarten, and the country's only high-wire unicycle. COSI also offers live shows, a variety of special events, family programs, camps, and more.</p>
+
+				<a href="http://cosi.org/" target="_blank"><button>WWW.COSI.ORG</button></a>
+			</div>
+
+			<hr class="break">
+
+			<!-- TECH MUSEUM PARTNER INFO -->
+			<div class="partner-img" id="cosi">
+				<img src="images/tech_part.png" title="The Tech Museum of Innovation" style"">
+			</div>
+
+			<div class="partner-text">
+				<h4>THE TECH MUSEUM OF INNOVATION</h4>
+
+				<p>The Tech is a hands-on technology and science museum for people of all ages and backgrounds.</p>
+				<p>The museum,located in the Capital of Silicon Valley, is a non-profit, experiential learning resource established to engage people in exploring and experiencing applied technologies affecting their lives.</p>
+
+				<a href="http://thetech.org/" target="_blank"><button>WWW.THETECH.ORG</button></a>
+			</div>
+
+			<hr class="break">
+
+			<!-- MSB PARTNER INFO -->
+			<div class="partner-img" id="msb">
+				<img src="images/mos_part.png" title="Museum of Science, Boston" style"">
+			</div>
+
+			<div class="partner-text">
+				<h4>MUSEUM OF SCIENCE, BOSTON</h4>
+					<p>One of the world&#39;s largest science centers and New England&#39;s most attended cultural institution, the Museum introduces about 1.5 million visitors a year to science, technology, engineering, and math (STEM) via dynamic programs and hundreds of interactive exhibits. </p>
+					<p>Founded in 1830, the Museum was first to embrace all the sciences under one roof. Highlights include the Hall of Human Life, Thomson Theater of Electricity, Charles Hayden Planetarium, Mugar Omni Theater, and Gordon Current Science & Technology Center.</p>
+
+				<a href="http://mos.org/" target="_blank"><button>WWW.MOS.ORG</button></a>
+			</div>
+
+
 		</div>
 	</section>
 	
